# api/swagger.yaml
@@ -51,13 +51,20 @@ components:
         - networkAccess
         - exposedPorts
       additionalProperties: false
-    File:
+    FileHeader:
       type: object
       properties:
         name:
           description: The path of the file.
           type: string
           example: ./logs/last.log
+        objectType:
+          description: The type of the object (file).
+          type: string
+          minLength: 1
+          maxLength: 1
+          enum: ["d", "l", "-"]
+          default: "-"
         size:
           description: The size of the file in bytes.
           type: integer
@@ -310,11 +317,11 @@ paths:
               schema:
                 type: object
                 properties:
-                  Files:
+                  files:
                     description: A list of all Files
                     type: array
                     items:
-                      $ref: "#/components/schemas/File"
+                      $ref: "#/components/schemas/FileHeader"
         "401":
           $ref: "#/components/responses/Unauthorized"
     patch:
